index.html reference change in every file

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="muktiai.html" class="brand">
+            <a href="index.html" class="brand">
                 <span class="brand-name" style="color: white; font-size: 2rem; font-weight: bold; margin-left: 10px;">Mukti AI</span>
             </a>
             <div class="nav-links">
