--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@
         </div>
         <div class="profile-content">
             <h2>Darshitkumar Pandya</h2>
-            <p>Founder & AI Consultant</p>
+            <p><strong>Founder & AI Consultant</strong></p>
             <p>With over four years of experience in developing and implementing innovative IT and AI solutions, I am passionate about helping organizations and individuals navigate the AI revolution. My expertise spans across AI strategy, implementation, and education, with a focus on creating practical, human-centric solutions.</p>
             <p>Having worked in diverse roles from Linux Administration to DevOps Engineering, I bring a unique perspective to AI integration and digital transformation. My experience at industry leaders like Robert Bosch GmbH has given me deep insights into implementing AI solutions at scale.</p>
         </div>
@@ -358,11 +358,6 @@
                 <div class="timeline-date">2016 - 2019</div>
                 <div class="timeline-role">Master's in Computational Mechanics</div>
                 <div class="timeline-company">University of Duisburg-Essen, Germany</div>
-                <ul class="timeline-details">
-                    <li>Focus: Computer Programming for Engineers, Data Science</li>
-                    <li>Key Areas: Programming (C/C++, Python), Data Science, Automation</li>
-                    <li>Special Projects: Machine Learning Applications in Engineering</li>
-                </ul>
             </div>
 
             <div class="timeline-item">
@@ -370,10 +365,6 @@
                 <div class="timeline-date">2011 - 2015</div>
                 <div class="timeline-role">Bachelor's in Mechanical Engineering</div>
                 <div class="timeline-company">Gujarat Technological University, India</div>
-                <ul class="timeline-details">
-                    <li>Focus: Computer Programming, Engineering Mathematics</li>
-                    <li>Notable Courses: Control Systems, Vehicle Technology</li>
-                </ul>
             </div>
         </div>
     </section>
