Add Datenschutz and Impressum pages

--- a/about.html
+++ b/about.html
@@ -370,7 +370,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Mukti AI. All rights reserved.</p>
+        <p>&copy; 2025 Mukti AI. All rights reserved. <a href="datenschutz.html">Datenschutz</a> | <a href="impressum.html">Impressum</a></p>
     </footer>
 </body>
 </html>
