Remove profile photo and professional journey

--- a/about.html
+++ b/about.html
@@ -91,20 +91,10 @@
 
         /* Profile Section */
         .profile-section {
-            max-width: 1200px;
+            max-width: 800px;
             margin: 4rem auto;
             padding: 0 2rem;
-            display: grid;
-            grid-template-columns: 1fr 2fr;
-            gap: 3rem;
-            align-items: start;
-        }
-
-        .profile-image {
-            width: 100%;
-            max-width: 300px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         /* Expertise Section */
@@ -254,9 +244,6 @@
     </section>
 
     <section class="profile-section">
-        <div class="profile-image-container">
-            <img src="assets/images/darshit.jpg" alt="Darshitkumar Pandya" class="profile-image">
-        </div>
         <div class="profile-content">
             <h2>Darshitkumar Pandya</h2>
             <p><strong>Founder & AI Consultant</strong></p>
@@ -309,46 +296,6 @@
         </div>
     </section>
 
-    <section class="timeline-section">
-        <h2>Professional Journey</h2>
-        <div class="timeline-container">
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date">2022 - Present</div>
-                <div class="timeline-role">Linux Administration Engineer</div>
-                <div class="timeline-company">Robert Bosch GmbH, Stuttgart</div>
-                <ul class="timeline-details">
-                    <li>Development and implementation of KI-supported agents for Linux development environments</li>
-                    <li>Optimization of Linux-based development infrastructure</li>
-                    <li>Conducting developer training for effective use of AI-supported environments</li>
-                </ul>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date">2021 - 2022</div>
-                <div class="timeline-role">DevOps Engineer / IT Administrator</div>
-                <div class="timeline-company">baramundi software AG, Augsburg</div>
-                <ul class="timeline-details">
-                    <li>Development of CI/CD DevOps environment on Azure DevOps</li>
-                    <li>Cloud infrastructure management with Terraform</li>
-                    <li>Analysis of telemetry data from the cloud</li>
-                </ul>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date">2019 - 2021</div>
-                <div class="timeline-role">Development Engineer</div>
-                <div class="timeline-company">Kolt Engineering GmbH, Böblingen</div>
-                <ul class="timeline-details">
-                    <li>Software tool development for simulation process optimization</li>
-                    <li>Process automation and efficiency improvement</li>
-                    <li>GUI development for enhanced user interaction</li>
-                </ul>
-            </div>
-        </div>
-    </section>
 
     <section class="timeline-section">
         <h2>Education</h2>
