Remove education section and update contact info

--- a/contact.html
+++ b/contact.html
@@ -272,10 +272,7 @@
                     <p>Based in Stuttgart, Germany</p>
                 </div>
                 <div class="contact-item">
-                    <p>Email: darshitkumar.pandya@gmail.com</p>
-                </div>
-                <div class="contact-item">
-                    <p>Phone: +4917642023180</p>
+                    <p>Email: muktiai.academy@gmail.com</p>
                 </div>
             </div>
 
