--- a/datenschutz.html
+++ b/datenschutz.html
@@ -133,7 +133,7 @@
         <h2>How We Use Your Data</h2>
         <p>Your details are used solely to process your request and respond to you. We do not share your personal information with third parties without your consent.</p>
         <h2>Data Deletion</h2>
-        <p>You can request the deletion of your data at any time by emailing <a href="mailto:darshitkumar.pandya@gmail.com">darshitkumar.pandya@gmail.com</a>.</p>
+        <p>You can request the deletion of your data at any time by emailing <a href="mailto:muktiai.academy@gmail.com">muktiai.academy@gmail.com</a>.</p>
     </div>
 
     <footer>
