--- a/impressum.html
+++ b/impressum.html
@@ -130,7 +130,7 @@
     <div class="content">
         <h2>Responsible for this website</h2>
         <p>Darshitkumar Pandya<br>Mukti AI<br>Stuttgart, Germany</p>
-        <p>Email: <a href="mailto:darshitkumar.pandya@gmail.com">darshitkumar.pandya@gmail.com</a><br>Phone: +4917642023180</p>
+        <p>Email: <a href="mailto:muktiai.academy@gmail.com">muktiai.academy@gmail.com</a><br>Phone: +4917642023180</p>
     </div>
 
     <footer>
