--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
         <div class="profile-content">
             <h2>Darshitkumar Pandya</h2>
             <p><strong>Founder & AI Consultant</strong></p>
-            <p>With over four years of experience in developing and implementing innovative IT and AI solutions, I am passionate about helping organizations and individuals navigate the AI revolution. My expertise spans across AI strategy, implementation, and education, with a focus on creating practical, human-centric solutions.</p>
+            <p>With over four years of experience in developing and implementing innovative IT and AI solutions, I am passionate about helping organizations and individuals navigate the AI revolution. My expertise spans across AI strategy and implementation, with a focus on creating practical, human-centric solutions.</p>
             <p>Having worked in diverse roles from Linux Administration to DevOps Engineering, I bring a unique perspective to AI integration and digital transformation. My experience at industry leaders like Robert Bosch GmbH has given me deep insights into implementing AI solutions at scale.</p>
         </div>
     </section>
@@ -286,7 +286,7 @@
                 </ul>
             </div>
             <div class="expertise-card">
-                <h3>Education & Training</h3>
+                <h3>Training</h3>
                 <ul>
                     <li>AI Curriculum Development</li>
                     <li>Technical Workshop Facilitation</li>
@@ -297,24 +297,6 @@
     </section>
 
 
-    <section class="timeline-section">
-        <h2>Education</h2>
-        <div class="timeline-container">
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date">2016 - 2019</div>
-                <div class="timeline-role">Master's in Computational Mechanics</div>
-                <div class="timeline-company">University of Duisburg-Essen, Germany</div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date">2011 - 2015</div>
-                <div class="timeline-role">Bachelor's in Mechanical Engineering</div>
-                <div class="timeline-company">Gujarat Technological University, India</div>
-            </div>
-        </div>
-    </section>
 
     <footer>
         <p>&copy; 2025 Mukti AI. All rights reserved. <a href="datenschutz.html">Datenschutz</a> | <a href="impressum.html">Impressum</a></p>
