Restore Education & Training heading

--- a/about.html
+++ b/about.html
@@ -286,7 +286,7 @@
                 </ul>
             </div>
             <div class="expertise-card">
-                <h3>Training</h3>
+                <h3>Education &amp; Training</h3>
                 <ul>
                     <li>AI Curriculum Development</li>
                     <li>Technical Workshop Facilitation</li>
